force-app/main/default/objects/SM_GestionContrat__e/SM_GestionContrat__e.object-meta.xml
<CustomObject>
    <label>SM_GestionContrat</label>
    <pluralLabel>SM_GestionContrat</pluralLabel>
</CustomObject>