force-app/main/default/objects/SM_GestionContrat__e/fields/idPropositionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>idPropositionCommerciale__c</fullName>
    <label>idPropositionCommerciale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>