force-app/main/default/objects/SM_GestionContrat__e/fields/noPortefeuilleContrat__c.field-meta.xml
<CustomField>
    <fullName>noPortefeuilleContrat__c</fullName>
    <label>noPortefeuilleContrat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>