force-app/main/default/objects/SM_GestionContrat__e/fields/statutContrat__c.field-meta.xml
<CustomField>
    <fullName>statutContrat__c</fullName>
    <label>statutContrat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>